--- a/styles/presentation-styles.css
+++ b/styles/presentation-styles.css
@@ -360,6 +360,7 @@
         overflow-y: scroll;
         border-width: 0.75vw;
         border-radius: 2.3vw;
+        height: 88vh;
     }
 
     #fullscreen-question {
@@ -374,15 +375,18 @@
         height: 14vw;
         top: 2vw;
         left: calc(0.5 * 90vw - 14vw * 0.5);
-        font-size: 12vw;
+        font-size: 14vw;
         border-radius: 1.6vw;
         border-width: 0.65vw;
         z-index: 99999;
+        padding-bottom: 0.6vw;
+        font-weight: bolder;
+        line-height: 0.7;
     }
 
     #fullscreen-regen-button:hover {
         background-color: rgb(65, 168, 68);
-        font-size: 12vw;
+        font-size: 14vw;
         border-width: 0.65vw;
     }
 
